--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.23",
     "babel-jest": "^29.7.0",
+    "flowbite-react": "^0.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
@@ -55,8 +56,5 @@
   },
   "peerDependencies": {
     "react": "^18.2.0"
-  },
-  "dependencies": {
-    "flowbite-react": "^0.8.0"
   }
 }
